# stark-vibed

./: .gitignore  .gitmodules  Cargo.toml  DESIGN.md  GOALS.md  PANEL_UI_DESIGN.md  STABILITY.md  TODO.md  rust-toolchain.toml  serve.bat
.claude/: settings.local.json
.github/workflows/: pages.yml
crates/stark-core/: Cargo.toml
crates/stark-core/src/: assets.rs  color.rs  colorspace.rs  command.rs  engine.rs  error.rs  geom.rs  image.rs  io.rs  lib.rs  path.rs  pigment.rs  session.rs
crates/stark-core/src/document/: action.rs  layer.rs  mod.rs  state.rs  timeline.rs
crates/stark-core/src/gpu/: composite.rs  context.rs  environment.rs  mod.rs  present.rs  readback.rs  stroke.rs  surface.rs  tile.rs
crates/stark-core/tests/: collab.rs  dynamics.rs  golden.rs  layers.rs  palette_knife.rs  replay.rs  save_load.rs  seam.rs  skeleton.rs  stroke.rs  tile_pool.rs
crates/stark-core/tests/common/: mod.rs
crates/stark-net/: Cargo.toml
crates/stark-net/src/: lib.rs  mirror.rs  proto.rs  session.rs  ticket.rs
crates/stark-net/tests/: sync.rs
crates/stark-shaders/: Cargo.toml  build.rs
crates/stark-shaders/src/: lib.rs
crates/stark-shaders/src/shaders/: blur.wesl  color.wesl  composite.wesl  diffuse.wesl  dynamics.wesl  fluid_advect.wesl  fluid_inject.wesl  fluid_smooth.wesl  integrate.wesl  media.wesl  media_common.wesl  media_mixbox.wesl  media_oklab.wesl  media_pigment.wesl  medium.wesl  mixer.wesl  noise.wesl  present.wesl  slice.wesl  stamp.wesl  stamp_common.wesl  stamp_oklab.wesl  stamp_pigment.wesl
crates/stark-ui/: Cargo.toml  Dioxus.toml
crates/stark-ui/assets/: stark.css
crates/stark-ui/assets/environment/: poly_haven_CC0_license.url
crates/stark-ui/src/: brush_editor.rs  collab.rs  main.rs  render.rs
crates/stark-ui/src/components/: mod.rs
crates/stark-ui/src/components/menubar/: style.css
