# Stark workspace. See DESIGN.md for the architecture this layout implements.
[workspace]
members = [
    "crates/*",
]
# stark-ui is a wasm/web app (Dioxus web + WebGPU); keep it out of the native
# default build/test so `cargo build`/`cargo test` stay host-only. Build it with
# `dx serve --platform web` or `cargo build -p stark-ui --target wasm32-unknown-unknown`.
default-members = [
    "crates/stark-core",
    "crates/stark-shaders",
]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

# Single source of truth for shared dependency versions (GOALS §Notable Dependencies).
[workspace.dependencies]
wgpu = "29.0.3"
glam = { version = "0.33", features = ["serde"] }
bytemuck = { version = "1", features = ["derive"] }
rpds = "1.2"
thiserror = "2"
pollster = "0.4"
wesl = "0.4"
history = { git = "https://github.com/cbbowen/history" }
png = "0.18"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
# Compact binary action log (no field names) + pure-Rust deflate (wasm-friendly).
postcard = { version = "1", features = ["alloc"] }
flate2 = "1"
# Structured logging/diagnostics; the frontend installs a console subscriber
# (tracing-wasm) so engine + UI traces show up in the browser devtools.
tracing = "0.1"

# stark-shaders is consumed by stark-core.
stark-shaders = { path = "crates/stark-shaders" }

[profile.dev]
# Shaders and GPU work are unbearably slow without optimized dependencies.
opt-level = 1
[profile.dev.package."*"]
opt-level = 3
