[package]
name = "stark-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Frontend-agnostic GPU painting engine for Stark (DESIGN.md)."

[dependencies]
wgpu = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
rpds = { workspace = true }
thiserror = { workspace = true }
history = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
flate2 = { workspace = true }
png = { workspace = true }
blake3 = { workspace = true }
tracing = { workspace = true }
stark-shaders = { workspace = true }
# Vendored as a git submodule (CC BY-NC 4.0); see vendor/mixbox/LICENSE. Pure
# no_std + libm, so it builds for wasm. Backs the Mixbox color space (§6.7).
mixbox = { path = "../../vendor/mixbox/rust" }

[dev-dependencies]
pollster = { workspace = true }
