[package]
name = "stark-ui"
version = "0.0.0"
edition.workspace = true
license.workspace = true
description = "Dioxus web frontend for Stark (DESIGN.md §11): WASM backend + WebGPU surface."

[dependencies]
stark-core = { path = "../stark-core" }
dioxus = { version = "0.7.9", features = ["web"] }
wgpu = { workspace = true }

# Web platform glue (the crate targets wasm32 via `dx serve --platform web`).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
console_error_panic_hook = "0.1"
